--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,4 @@
 
-body {
-	margin: 5% 10% 0 10%;  
-}
-
 * {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -27,18 +23,23 @@ img {
  * Header
  *
  */
-#header-logo {
-	margin-top: 7%;
+
+.header {
+	border-bottom: 2px solid red;
+	margin-bottom: 2%;
+ }
+
+.header-logo {
+	width: 100%;
+  	max-width: 30em;
+  	height: 5em;
+  	padding: 0;
+	margin-left: 3%;
 }
 
-#header-info {
-	margin-top: 6%;
-}
-
-.header--logo {
-	width: 100px; 
-	height: 100px;
-	line-height: 10em;
+.header-info {
+	margin: 0;
+	width: 100%;
 }
 
 h1 {
@@ -51,20 +52,8 @@ h1 {
 
 small {
 	font-weight: 500;
-	margin-top: 0;
+	margin: 0;
 	margin-left: 18%;
-}
-
-/*
- *
- * Horizontal rule
- *
- */
-
-.horizontal-rule {
-	width: 100%;
-	height: 0.3em;
-	background: red;
 }
 
 /*
@@ -74,9 +63,13 @@ small {
  */
 
 .major-image {
-	min-width: 100%;
-	min-height: 25em;
-	background: -webkit-linear-gradient(25deg, red, silver);
+	padding-top: 5%;
+	max-width: 100%;
+	width: calc(100% - 20px) /3;
+	height: 25em;
+	background-image: url(../img/html.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 /*
@@ -85,20 +78,31 @@ small {
  *
  */
 
+ .featured-works {
+ 	width: 80%;
+ 	padding-top: 5%;
+ }
+
+.main {
+ 	width: 100%;
+ }
+
 h2 { 
 	font-weight: 400;
 	color: red;
-	margin-left: 0;
+	margin: 0;
 	font-size: 1.5em;
 }
 
 p {
-	font-size: 1.5em;
+	font-size: 1em;
+	width: 90%;
+	margin-left: 10%;
 }
 
 h3 { 
 	text-align: center; 
-	margin-top: 2%;
+	margin: 0;
 	font-size: 1.5em;
 }
 
@@ -111,9 +115,8 @@ a {
 }
 
 .minor-image {
-	height: 210px;
+	height: 12em;
 	width: 100%; 
-	margin: 0 3%;
 }
 
 /*
@@ -125,6 +128,5 @@ a {
 .footer-bg {
 	background: silver;
 	height: 5vh;
-	width: 5vh;
-
+	width: 100%;
 }
