--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,10 @@
 	font-family: 'Lato', sans-serif;
 }
 
-img {
-	margin-top: 3%;
-}
-
-.placeholder {
-	width: 100%; 
-	text-align: center;
-	line-height: 17em;
-	font-size: 1.2em;
+.container {
+	display:flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 /*
@@ -25,21 +20,28 @@ img {
  */
 
 .header {
-	border-bottom: 2px solid red;
+	border-bottom: 3px solid silver;
 	margin-bottom: 2%;
  }
 
+ .nav-bar {
+	display:flex;
+	flex-wrap: wrap;
+}
+
 .header-logo {
-	width: 100%;
-  	max-width: 30em;
-  	height: 5em;
-  	padding: 0;
-	margin-left: 3%;
+	width: 15%;
+    min-width: 50px;
+    max-width: 100px;
+    height: 100%;
+    padding: 1%;
 }
 
 .header-info {
-	margin: 0;
-	width: 100%;
+	text-align: right;
+    width: 83%;
+    padding: 1% 0;
+    font-size: 20px;
 }
 
 h1 {
@@ -63,13 +65,10 @@ small {
  */
 
 .major-image {
-	padding-top: 5%;
-	max-width: 100%;
-	width: calc(100% - 20px) /3;
-	height: 25em;
-	background-image: url(../img/html.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
+	margin-top: 1%;
+	width: 100%;
+	min-height: 12em;
+	flex-basis: 50%;
 }
 
 /*
@@ -78,13 +77,24 @@ small {
  *
  */
 
- .featured-works {
+ .minor-image {
+	width: 100%;
+	border-radius: 50%;
+	height: 65%;
+}
+
+.card {
+	min-width: 200px;
+	width: 25%;
+	margin: 0 10px 0 0;
+	border: 2px solid red;
+	border-radius: 2%;
+	padding-top: 7%; 
+}
+
+.featured-works {
  	width: 80%;
  	padding-top: 5%;
- }
-
-.main {
- 	width: 100%;
  }
 
 h2 { 
@@ -103,20 +113,16 @@ p {
 h3 { 
 	text-align: center; 
 	margin: 0;
-	font-size: 1.5em;
+	font-size: 14px;
 }
 
 a {
+	display: block;
 	min-width: 3em;
 	min-height: 3em;
-	display: block;
     margin: auto;
     text-align: center;
-}
-
-.minor-image {
-	height: 12em;
-	width: 100%; 
+    text-decoration: none;
 }
 
 /*
@@ -129,4 +135,5 @@ a {
 	background: silver;
 	height: 5vh;
 	width: 100%;
+	margin-top: 2%;
 }
