--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ small {
 .card {
 	min-width: 200px;
 	width: 25%;
+	height: 20%;
 	margin: 0 10px 0 0;
 	border: 2px solid red;
 	border-radius: 2%;
