--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,5 @@
 
+
 @media screen and (min-width: 750px) {
 	.container, .nav-bar, .footer-bg {
     	width: 750px;
@@ -13,7 +14,17 @@
   }
 }
 
+@media screen and (min-width: 635px) and (max-width: 645px) {
+	.card:last-of-type {
+    	margin-top: 2%;
+  	}
+}
+
 @media screen and (max-width: 635px) {
+  .card {
+    margin-bottom: 2%;
+  }
+
   .featured-works {
     font-size: 25px;
   }
@@ -40,4 +51,6 @@
     min-width: 100%;
   }
 }
+
+
 
